# Consequence

./: .env.example  .gitignore  docker-compose.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/book-of-genesis/: page.tsx
app/cc/: layout.tsx  page.tsx
app/contact/: page.tsx
app/docs/: page.tsx
app/download/: page.tsx
app/earnings/: page.tsx
app/how-the-rails-connect/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/session-protocol/: page.tsx
app/shop/: layout.tsx  page.tsx
app/signup/: page.tsx
app/software/: layout.tsx  page.tsx
app/treasury/: layout.tsx  page.tsx
app/trending/: page.tsx
app/workspace/: page.tsx
components/: consequence-map.tsx  hash-scroll.tsx  layout-shell.tsx  live-ticker.tsx  mark.tsx  partner-stack-marquee.tsx  site-footer.tsx  site-nav.tsx  ui.tsx
components/auth/: auth-form.tsx  auth-shell.tsx  session-banner.tsx
components/cc/: for-you.tsx  marketplace.tsx  shop-search.tsx  spotlight.tsx  topbar.tsx  wallet.tsx
components/collaboration/: collaboration-feature-view.tsx  (+1 more)
docs/: CONSEQUENCE_ARCHITECTURE_AUDIT.md  DOMAINS.md
hooks/: use-collaboration.ts  use-in-view-once.ts  use-keyboard-shortcuts.ts  use-panel-resize.ts  use-scroll-hide-header.ts
lib/: auth-session.ts  collaboration-features.ts  rails-code-samples.ts  urls.ts
lib/search/: db-sync.ts  (+4 more)
scripts/: dev.mjs
server/: Cargo.toml
server/src/: main.rs
stores/: command-history.ts  workspace-store.ts
(+58 files in other folders)
